# Manikel

./: .gitignore  CMakeLists.txt  DockerFile  Dockerfile  README.md  blacklist.txt  client.cpp  server.cpp
.github/workflows/: c-cpp.yml  docker-image.yml  docker-publish.yml
src/: calc.cpp  functions.cpp  functions.h  main.cpp
tests/: calc_test.cpp  input_test.cpp  test_main.cpp
